Bugzilla bug #39731: added PR_ImportPipe and support of pipes to PR_GetInheritedFD. Modified files: pprio.h, prfile.c, prinit.c, ptio.c